# py-gbcms

./: .coverage  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.python-slim  Dockerfile.test  MANIFEST.in  Makefile  PYTHON_PACKAGE_STRUCTURE.md  README.md  TEST_INTEGRATION_COMPLETE.md  book.json  coverage.xml  debug_demo.py  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_real_data.sh  versions.json
.antigravity/: ARCHITECTURE.md  DEVELOPMENT.md
.github/: GIT_FLOW.md
2.4.0/: 404.html  index.html  sitemap.xml
2.5.0/: 404.html  index.html  sitemap.xml
2.6.0/: 404.html  index.html  sitemap.xml
2.6.1/: 404.html  index.html  sitemap.xml
2.7.0/: 404.html  index.html  sitemap.xml
2.8.0/: 404.html  index.html  sitemap.xml
3.0.0/: 404.html  index.html  sitemap.xml
ARCHITECTURE/: index.html
CHANGELOG/: index.html
CLI_FEATURES/: index.html
CONTRIBUTING/: index.html
CONTRIBUTING_DOCS/: index.html
DEVELOPMENT/: index.html
INPUT_OUTPUT/: index.html
INSTALLATION/: index.html
NEXTFLOW/: index.html
RELEASE/: index.html
SUMMARY/: index.html
TESTING/: index.html
WORKFLOWS/: index.html
advanced-usage/: index.html
architecture/: index.html
cli/: index.html
compat/py-gbcms/: README.md  pyproject.toml
compat/py-gbcms/py_gbcms/: __init__.py
dev/: 404.html  index.html  sitemap.xml
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  CICD_SETUP_COMPLETE.md  CLI_FEATURES.md  COMPLETE_FEATURES_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING_DOCS.md  CPP_FEATURE_COMPARISON.md  CYVCF2_IMPLEMENTATION_SUMMARY.md  CYVCF2_SUPPORT.md  DEVELOPMENT.md  DOCKER_BASE_COMPARISON.md  DOCKER_GUIDE.md  DOCKER_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  FAQ.md  FINAL_ORGANIZATION_SUMMARY.md  FINAL_REVIEW.md  GENERIC_COUNTING.md  GITHUB_ACTIONS.md  GITHUB_VISIBILITY.md  IMPLEMENTATION_SUMMARY.md  INPUT_OUTPUT.md  INSERTION_AND_FRAGMENT_ANALYSIS.md  INSTALLATION.md  NEXTFLOW.md  PACKAGE_REVIEW.md  PACKAGE_STRUCTURE.md  PARALLELIZATION_GUIDE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  RELEASE.md  SUMMARY.md  TESTING.md  WORKFLOWS.md  WORKFLOWS_UPDATED.md  advanced-usage.md  architecture.md  index.md  (+1 more)
getting-started/: index.html
nextflow/: CHANGES.md  README.md  index.html  main.nf  nextflow.config
quick-start/: index.html
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: counting.rs  lib.rs  normalize.rs  parquet_writer.rs  types.rs
rust/src/counting/: alignment.rs  engine.rs  fragment.rs  mfsd.rs  mod.rs  pairhmm.rs  utils.rs  variant_checks.rs
rust/src/normalize/: decomp.rs  engine.rs  fasta.rs  left_align.rs  mod.rs  repeat.rs  types.rs
scripts/: benchmark_threads.py  benchmark_v2.py  setup_and_test.sh  test_docker.sh  test_maf_workflow.sh  test_vcf_workflow.sh  verify_installation.py
search/: search_index.json
site/: sitemap.xml
src/gbcms_rs/: Cargo.toml  pyproject.toml
src/gbcms_rs/src/: counting.rs  lib.rs  stats.rs  types.rs
(+331 files in other folders)
