[package]
name = "gbcms_rs"
version = "2.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
rust-htslib = "0.51.0"
thiserror = "2.0"
anyhow = "1.0"
bio-types = "1.0"
statrs = "0.18.0"  # For Fisher's exact test
rayon = "1.10"
bio = "3.0"
log = "0.4"
pyo3-log = "0.13.2"
# Parquet writer for --mfsd-parquet: writes raw fragment size arrays natively
# from Rust, avoiding an FFI round-trip and the pyarrow dependency.
arrow-array = { version = "53", default-features = false }
arrow-buffer = { version = "53", default-features = false }
arrow-schema = { version = "53", default-features = false }
parquet = { version = "53", default-features = false, features = ["arrow"] }
