[package]
name = "gbcms_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gbcms_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rust-htslib = "0.44.1"
thiserror = "1.0"
anyhow = "1.0"
bio-types = "1.0"
statrs = "0.16.0"  # For Fisher's exact test
rayon = "1.10"
